# byteshuffle

./: .GEMINI.md  .cirrus.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: shuffle.rs
src/: avx2.rs  avx512f.rs  generic.rs  lib.rs  neon.rs  sse2.rs
