[package]
name = "byteshuffle"
version = "0.1.0"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/asomers/byteshuffle-rs"
categories = ["compression"]
keywords = ["simd"]
documentation = "https://docs.rs/byteshuffle"
rust-version = "1.87.0"
description = """
SIMD-accelerated byte shuffle/unshuffle functions
"""


[dependencies]
cfg-if = "1.0"
ctor = "0.2.0"

[dev-dependencies]
criterion = "0.7"
rand = "0.9.0"
rstest = "0.17.0"

[[bench]]
name = "shuffle"
harness = false
