[package]
name = "byteshuffle"
version = "0.1.1"
edition = "2021"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/bfffs/byteshuffle-rs"
categories = ["compression"]
keywords = ["simd"]
documentation = "https://docs.rs/byteshuffle"
rust-version = "1.89.0"
description = """
SIMD-accelerated byte shuffle/unshuffle functions
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
nightly = []

[dependencies]
cfg-if = "1.0"
ctor = { version = "0.6.0", default-features = false, features = ["proc_macro"] }

[dev-dependencies]
criterion = "0.7"
rand = "0.9.0"
rstest = "0.18.0"

[[bench]]
name = "shuffle"
harness = false
